--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,5 +28,8 @@ flutter:
   assets:
     - lib/assets/foto_aaron.jpg
     - lib/assets/Andy_Foto.jpg
+    - lib/assets/defensa1.jpg
+    - lib/assets/defensa2.jpg
+    - lib/assets/defensa3.jpg
 
   uses-material-design: true
